make-a-wish-salesforce/src/objects/npo02__Household__c.object
<CustomObject>
    <description>Physical mailing address for grouping contacts</description>
    <fields>
        <fullName>npo02__Addressee__c</fullName>
        <label>Addressee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Always_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set the Household name and other fields using anonymous information.</description>
        <label>Always Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formal_Greeting__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Formal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_MailingAddress__c</fullName>
        <description>Formula: Concatenation of other Mailing fields for this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</description>
        <formula>npo02__MailingStreet__c &amp; BR() &amp;
npo02__MailingCity__c &amp; IF(LEN(npo02__MailingCity__c)  &gt; 0, &quot;, &quot;, &quot;&quot;) &amp; npo02__MailingState__c &amp; &quot;  &quot; &amp;  npo02__MailingPostalCode__c 
&amp; if (LEN(npo02__MailingCountry__c)&gt;0,BR()&amp;npo02__MailingCountry__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__HouseholdEmail__c</fullName>
        <description>Set by the original Contact which created this Household. Can be edited in Household, but does not update Contact.</description>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npo02__HouseholdPhone__c</fullName>
        <description>Set by the original Contact which created this Household. Can be edited in Household, but does not update Contact.</description>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npo02__Household_ID__c</fullName>
        <label>Household ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Informal_Greeting__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Informal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MailingCity__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__MailingCountry__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__MailingPostalCode__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__MailingState__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__MailingStreet__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Membership_Span__c</fullName>
        <description>Formula: The number of years for which this Household has had a Member.</description>
        <formula>year(npo02__MembershipEndDate__c ) - year(npo02__MembershipJoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Membership_Status__c</fullName>
        <description>Grace period defaults to 30 days. This can be adjusted in the Households Settings tab.</description>
        <formula>if ( npo02__MembershipEndDate__c  &lt;today(), if (npo02__MembershipEndDate__c  &gt; ( TODAY() - 
IF(NOT(ISNULL($Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c)), $Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c, 30)) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(npo02__MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current, expired, or grace period</inlineHelpText>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SYSTEM_CUSTOM_NAMING__c</fullName>
        <description>Hidden system field: do not change. Updated by automatic processes.</description>
        <label>_SYSTEM: CUSTOM NAMING</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Household_Members__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>the number of Contacts in the Household.</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Household</label>
    <listViews>
        <fullName>npo02__All</fullName>
        <columns>NAME</columns>
        <columns>npo02__Formal_Greeting__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__SYSTEM_CUSTOM_NAMING__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>